# counterclaw-core

./: .clawhubignore  README.md  SKILL.md  publish.sh  pyproject.toml
.github/workflows/: ci.yml  clawhub-publish.yml  test.yml
src/counterclaw/: __init__.py  middleware.py
src/counterclaw_core.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/prompt_guard_core/: __init__.py  middleware.py  scanner.py
tests/: test_scanner.py
